# guile-flac

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README.org  configure.ac  guix.scm  shell.nix
build-aux/: pre-inst-env.in
build-aux/am/: Makefile.am  guile.am
build-aux/m4/: Makefile.am  guile.m4
flac/: format.scm  stream.scm
src/: Makefile.am  flac.scm  metadata.c  metadata.h
src/flac/: Makefile.am  bindings.scm  config.scm  config.scm.in  decoder.scm  format.scm  metadata.scm  reader.scm  stream.scm  tests.scm  utils.scm  version.scm.in
src/flac/tests/: utils.scm
src/gflac/: decode.scm  meta.scm
tests/: Makefile.am  faulty-tests.scm  ietf-decoding-examples.scm  rcf-examples.scm  subset-tests.scm  uncommon-tests.scm
